--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "behat/transliterator": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.6.*"
+        "phpunit/phpunit": "8.5.52"
     },
     "autoload": {
         "psr-4": { "JeroenDesloovere\\VCard\\": "src/" }
